<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/map">

    <TextView android:text="@string/locate_us" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/text_color"/>
    <Button
        android:layout_width="fill_parent"
        android:text="@string/nearme"
        android:id="@+id/nearme"
        android:layout_height="33sp"
        android:layout_centerHorizontal="true"
        android:background="@color/actionbar_background"
        android:textColor="#ffffffff"
        android:layout_marginTop="390dp"
        />
    <Button
        android:layout_width="800dp"
        android:layout_height="33sp"
        android:text="@string/location"
        android:id="@+id/location"
        android:layout_centerHorizontal="true"
        android:background="@color/text_black"
        android:textColor="#ffffffff"
        android:layout_marginTop="440dp"
        />
</RelativeLayout>