<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <!-- Add content here -->
        <!--<LinearLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical" >-->

        <!--<TextView-->
        <!--android:id="@+id/textView1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:text="Current Balance"-->
        <!--/>-->
        <!--</LinearLayout>-->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
            android:background="@drawable/bank"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="304dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mini_statement"
                    android:id="@+id/mini_statement"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#DCDCDC"/>

                <EditText
                    android:inputType="date"
                    android:id="@+id/from_date"
                    android:layout_below="@+id/textView"
                    android:hint="@string/from_date"
                    android:maxLength="10"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="serif"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center_horizontal|center_vertical"
                    />
                <EditText
                    android:id="@+id/to_date"
                    android:hint="@string/to_date"
                    android:maxLength="8"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="serif"
                    />

                <Button
                    android:inputType="date"
                    android:layout_width="wrap_content"
                    android:layout_height="33sp"
                    android:text="@string/get_statement"
                    android:id="@+id/get_statement"
                    android:layout_below="@+id/numberpassword"
                    android:layout_centerHorizontal="true"
                    android:background="#ff1817ff"
                    android:textColor="#ffffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="40dp"
                    />
                <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/reg"-->
                <!--android:id="@+id/reg"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:background="#ff1817ff"-->
                <!--android:textColor="#ffffffff"-->
                <!--android:layout_marginLeft="120dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--/>-->

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp"
        android:background="#d6d6d6"/>
</android.support.v4.widget.DrawerLayout>